...
    <string name="reminder_description">Description</string>
    <string name="reminder_latitude">Latitude</string>
    <string name="reminder_longitude">Longitude</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
...
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="TOAST_STRING">Test 1</string>

    <!-- Save Reminder Page -->
    <string name="permission_denied_explanation">Location permissions are required for using this app.</string>
    <string name="snackbar_try_again">Try Again</string>
...
